--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@next/mdx": "^16.0.6",
-    "next": "16.0.6",
+    "flowbite": "^4.0.1",
+    "flowbite-react": "^0.12.14",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
