--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/mdx": "^16.0.6",
     "flowbite": "^4.0.1",
     "flowbite-react": "^0.12.14",
+    "framer-motion": "^12.23.26",
     "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
